// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MarketplacePage should match a snapshot 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <mock-styled.div />
      <mock-styled.div
        classname="mock-css.
  flex: 1 1 auto;
"
      >
        <mock-styled.aside
          classname=""
        >
          <mock-styled.span
            classname="mock-css.
  margin-bottom: 0.75rem;
 mock-css.
  font-size: 5rem;
"
          >
            <svg />
          </mock-styled.span>
          <mock-styled.p
            classname=""
          >
            AppMarket Visibility and Installation Management
          </mock-styled.p>
          <mock-styled.p
            classname="mock-css."
          >
            To set the visibility of an app in the AppMarket or to manage installations for your organisation or specific office groups, please select an app.
          </mock-styled.p>
          <div
            class="mock-css.
  margin-bottom: 0.75rem;
"
          >
            <mock-styled.p
              classname=""
            >
              Organisations
            </mock-styled.p>
            <mock-styled.p
              classname="mock-css."
            >
              You are an admin for multiple organisations - select from the list below for data specific to one of these organisations
            </mock-styled.p>
            <mock-styled.div
              classname="mock-css.
  border-radius: 0.25rem;
"
            >
              <mock-styled.div>
                <mock-styled.select
                  classname="mock-css.
  width: 100%;
"
                  value="SOME_ID"
                >
                  <option
                    value=""
                  >
                    Please Select
                  </option>
                  <option
                    value="value"
                  >
                    name
                  </option>
                  <option
                    value="value"
                  >
                    name
                  </option>
                </mock-styled.select>
                <mock-styled.label
                  htmlfor="myId"
                >
                  Select Organisation
                </mock-styled.label>
              </mock-styled.div>
            </mock-styled.div>
          </div>
          <mock-styled.div>
            <mock-styled.div
              classname="mock-css.
  input {
    width: 100%;
  }
"
            >
              <mock-styled.input
                classname=""
                id="test-static-id"
                name="searchTerm"
                placeholder="Developer or App"
                type="text"
              />
              <mock-styled.label
                htmlfor="test-static-id"
              >
                Search
              </mock-styled.label>
            </mock-styled.div>
          </mock-styled.div>
        </mock-styled.aside>
        <mock-styled.section
          classname="mock-css.
  height: 100%;
"
        >
          <mock-styled.div
            classname="mock-css.
  justify-content: space-between;
"
          >
            <mock-styled.h1
              classname=""
            >
              SOME_NAME
               AppMarket
            </mock-styled.h1>
          </mock-styled.div>
          <mock-styled.div
            classname=""
          >
            <mock-styled.div
              classname=""
            >
              <mock-styled.div
                classname="mock-css.
  @keyframes fade-in {
    from {
      opacity: 0;
    }

    to {
      opacity: 1;
    }
  }
  animation-duration: 0.5s;
  animation-fill-mode: both;
  animation-delay: 0.1s;
  animation-name: fade-in;
"
              >
                <mock-styled.div>
                  <mock-styled.div
                    classname=""
                  >
                    <mock-styled.div
                      style="font-size: 1.953125em; width: 50px; height: 50px;"
                    >
                      <svg
                        fill="none"
                        height="1em"
                        viewBox="0 0 60 35"
                        width="1em"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M50.9685 13.7768C50.1805 8.8795 45.8082 5.12069 40.5469 5.12069C38.5676 5.12069 36.6656 5.65245 35.016 6.64427C32.5063 2.54863 27.9881 0 22.9688 0C15.2148 0 8.90625 6.12582 8.90625 13.6552C8.90625 13.7018 8.90625 13.7502 8.90801 13.7968C3.92461 14.6119 0 18.8308 0 23.8966C0 29.544 4.84816 34.1379 10.6641 34.1379H49.3359C55.1518 34.1379 60 29.544 60 23.8966C60 18.7876 56.0119 14.542 50.9685 13.7768Z"
                          fill="#E3E3E3"
                        />
                      </svg>
                    </mock-styled.div>
                  </mock-styled.div>
                  <mock-styled.div
                    classname="mock-css."
                  >
                    <mock-styled.h5>
                      Test App Dev
                    </mock-styled.h5>
                    <mock-styled.h6>
                      DFG
                    </mock-styled.h6>
                    <mock-styled.h6>
                      Integration
                    </mock-styled.h6>
                  </mock-styled.div>
                </mock-styled.div>
                <mock-styled.div
                  classname="mock-css.
  margin-top: 0.75rem;
"
                >
                  <mock-styled.h5>
                    Installation and Visibility
                  </mock-styled.h5>
                  <mock-styled.h6 />
                </mock-styled.div>
                <mock-styled.div>
                  <mock-styled.div>
                    <mock-styled.span
                      classname=""
                    >
                      <svg />
                    </mock-styled.span>
                  </mock-styled.div>
                  <mock-styled.div>
                    <mock-styled.div>
                      Installation Status
                    </mock-styled.div>
                    <mock-styled.div>
                      Not installed
                    </mock-styled.div>
                  </mock-styled.div>
                </mock-styled.div>
                <mock-styled.div>
                  <mock-styled.div>
                    <mock-styled.span
                      classname=""
                    >
                      <svg />
                    </mock-styled.span>
                  </mock-styled.div>
                  <mock-styled.div>
                    <mock-styled.div>
                      Marketplace Visibility
                    </mock-styled.div>
                    <mock-styled.div>
                      Marketplace visible
                    </mock-styled.div>
                  </mock-styled.div>
                </mock-styled.div>
              </mock-styled.div>
            </mock-styled.div>
            <mock-styled.div
              classname=""
            >
              <mock-styled.div
                classname="mock-css.
  @keyframes fade-in {
    from {
      opacity: 0;
    }

    to {
      opacity: 1;
    }
  }
  animation-duration: 0.5s;
  animation-fill-mode: both;
  animation-delay: 0.1s;
  animation-name: fade-in;
"
              >
                <mock-styled.div>
                  <mock-styled.div
                    classname=""
                  >
                    <img
                      src="https://reapit-marketplace-app-media-dev.s3.eu-west-2.amazonaws.com/Reapit-Insights-icon.png"
                    />
                  </mock-styled.div>
                  <mock-styled.div
                    classname="mock-css."
                  >
                    <mock-styled.h5>
                      Reapit Insights
                    </mock-styled.h5>
                    <mock-styled.h6>
                      Reapit Ltd
                    </mock-styled.h6>
                    <mock-styled.h6 />
                  </mock-styled.div>
                </mock-styled.div>
                <mock-styled.div
                  classname="mock-css.
  margin-bottom: 0.75rem;
"
                >
                  Blah blah blah. Blah blah blah. Blah blah blah. Blah blah blah. Blah blah blah.
                </mock-styled.div>
                <mock-styled.div
                  classname="mock-css.
  margin-top: 0.75rem;
"
                >
                  <mock-styled.h5>
                    Installation and Visibility
                  </mock-styled.h5>
                  <mock-styled.h6 />
                </mock-styled.div>
                <mock-styled.div>
                  <mock-styled.div>
                    <mock-styled.span
                      classname=""
                    >
                      <svg />
                    </mock-styled.span>
                  </mock-styled.div>
                  <mock-styled.div>
                    <mock-styled.div>
                      Installation Status
                    </mock-styled.div>
                    <mock-styled.div>
                      Not installed
                    </mock-styled.div>
                  </mock-styled.div>
                </mock-styled.div>
                <mock-styled.div>
                  <mock-styled.div>
                    <mock-styled.span
                      classname=""
                    >
                      <svg />
                    </mock-styled.span>
                  </mock-styled.div>
                  <mock-styled.div>
                    <mock-styled.div>
                      Marketplace Visibility
                    </mock-styled.div>
                    <mock-styled.div>
                      Marketplace visible
                    </mock-styled.div>
                  </mock-styled.div>
                </mock-styled.div>
              </mock-styled.div>
            </mock-styled.div>
            <mock-styled.div
              classname=""
            >
              <mock-styled.div
                classname="mock-css.
  @keyframes fade-in {
    from {
      opacity: 0;
    }

    to {
      opacity: 1;
    }
  }
  animation-duration: 0.5s;
  animation-fill-mode: both;
  animation-delay: 0.1s;
  animation-name: fade-in;
"
              >
                <mock-styled.div>
                  <mock-styled.div
                    classname=""
                  >
                    <img
                      src="https://reapit-marketplace-app-media-dev.s3.eu-west-2.amazonaws.com/Reapit-Connect-Management-icon.png"
                    />
                  </mock-styled.div>
                  <mock-styled.div
                    classname="mock-css."
                  >
                    <mock-styled.h5>
                      Marketplace Management
                    </mock-styled.h5>
                    <mock-styled.h6>
                      Reapit Ltd
                    </mock-styled.h6>
                    <mock-styled.h6 />
                  </mock-styled.div>
                </mock-styled.div>
                <mock-styled.div
                  classname="mock-css.
  margin-bottom: 0.75rem;
"
                >
                  Description Description Description Description Description Description Description Description
                </mock-styled.div>
                <mock-styled.div
                  classname="mock-css.
  margin-top: 0.75rem;
"
                >
                  <mock-styled.h5>
                    Installation and Visibility
                  </mock-styled.h5>
                  <mock-styled.h6 />
                </mock-styled.div>
                <mock-styled.div>
                  <mock-styled.div>
                    <mock-styled.span
                      classname=""
                    >
                      <svg />
                    </mock-styled.span>
                  </mock-styled.div>
                  <mock-styled.div>
                    <mock-styled.div>
                      Installation Status
                    </mock-styled.div>
                    <mock-styled.div>
                      Not installed
                    </mock-styled.div>
                  </mock-styled.div>
                </mock-styled.div>
                <mock-styled.div>
                  <mock-styled.div>
                    <mock-styled.span
                      classname=""
                    >
                      <svg />
                    </mock-styled.span>
                  </mock-styled.div>
                  <mock-styled.div>
                    <mock-styled.div>
                      Marketplace Visibility
                    </mock-styled.div>
                    <mock-styled.div>
                      Marketplace visible
                    </mock-styled.div>
                  </mock-styled.div>
                </mock-styled.div>
              </mock-styled.div>
            </mock-styled.div>
            <mock-styled.div
              classname=""
            >
              <mock-styled.div
                classname="mock-css.
  @keyframes fade-in {
    from {
      opacity: 0;
    }

    to {
      opacity: 1;
    }
  }
  animation-duration: 0.5s;
  animation-fill-mode: both;
  animation-delay: 0.1s;
  animation-name: fade-in;
"
              >
                <mock-styled.div>
                  <mock-styled.div
                    classname=""
                  >
                    <img
                      src="https://reapit-marketplace-app-media-dev.s3.eu-west-2.amazonaws.com/Holly-Test-App-icon(1).png"
                    />
                  </mock-styled.div>
                  <mock-styled.div
                    classname="mock-css."
                  >
                    <mock-styled.h5>
                      Holly Test App
                    </mock-styled.h5>
                    <mock-styled.h6>
                      Holly Phillips Testing
                    </mock-styled.h6>
                    <mock-styled.h6 />
                  </mock-styled.div>
                </mock-styled.div>
                <mock-styled.div
                  classname="mock-css.
  margin-bottom: 0.75rem;
"
                >
                  https://holly.com https://holly.com https://holly.com https://holly.comhttps://holly.com https://holly.comhttps://holly.com https://holly.com
                </mock-styled.div>
                <mock-styled.div
                  classname="mock-css.
  margin-top: 0.75rem;
"
                >
                  <mock-styled.h5>
                    Installation and Visibility
                  </mock-styled.h5>
                  <mock-styled.h6 />
                </mock-styled.div>
                <mock-styled.div>
                  <mock-styled.div>
                    <mock-styled.span
                      classname=""
                    >
                      <svg />
                    </mock-styled.span>
                  </mock-styled.div>
                  <mock-styled.div>
                    <mock-styled.div>
                      Installation Status
                    </mock-styled.div>
                    <mock-styled.div>
                      Not installed
                    </mock-styled.div>
                  </mock-styled.div>
                </mock-styled.div>
                <mock-styled.div>
                  <mock-styled.div>
                    <mock-styled.span
                      classname=""
                    >
                      <svg />
                    </mock-styled.span>
                  </mock-styled.div>
                  <mock-styled.div>
                    <mock-styled.div>
                      Marketplace Visibility
                    </mock-styled.div>
                    <mock-styled.div>
                      Marketplace hidden
                    </mock-styled.div>
                  </mock-styled.div>
                </mock-styled.div>
              </mock-styled.div>
            </mock-styled.div>
            <mock-styled.div
              classname=""
            >
              <mock-styled.div
                classname="mock-css.
  @keyframes fade-in {
    from {
      opacity: 0;
    }

    to {
      opacity: 1;
    }
  }
  animation-duration: 0.5s;
  animation-fill-mode: both;
  animation-delay: 0.1s;
  animation-name: fade-in;
"
              >
                <mock-styled.div>
                  <mock-styled.div
                    classname=""
                  >
                    <img
                      src="https://reapit-marketplace-app-media-dev.s3.eu-west-2.amazonaws.com/Reapit-Payments-Portal-icon.png"
                    />
                  </mock-styled.div>
                  <mock-styled.div
                    classname="mock-css."
                  >
                    <mock-styled.h5>
                      Reapit Payments Portal
                    </mock-styled.h5>
                    <mock-styled.h6>
                      Reapit Ltd
                    </mock-styled.h6>
                    <mock-styled.h6 />
                  </mock-styled.div>
                </mock-styled.div>
                <mock-styled.div
                  classname="mock-css.
  margin-bottom: 0.75rem;
"
                >
                  It takes your money and sends it to Sage Pay. Then it updates RPS.
                </mock-styled.div>
                <mock-styled.div
                  classname="mock-css.
  margin-top: 0.75rem;
"
                >
                  <mock-styled.h5>
                    Installation and Visibility
                  </mock-styled.h5>
                  <mock-styled.h6 />
                </mock-styled.div>
                <mock-styled.div>
                  <mock-styled.div>
                    <mock-styled.span
                      classname=""
                    >
                      <svg />
                    </mock-styled.span>
                  </mock-styled.div>
                  <mock-styled.div>
                    <mock-styled.div>
                      Installation Status
                    </mock-styled.div>
                    <mock-styled.div>
                      Not installed
                    </mock-styled.div>
                  </mock-styled.div>
                </mock-styled.div>
                <mock-styled.div>
                  <mock-styled.div>
                    <mock-styled.span
                      classname=""
                    >
                      <svg />
                    </mock-styled.span>
                  </mock-styled.div>
                  <mock-styled.div>
                    <mock-styled.div>
                      Marketplace Visibility
                    </mock-styled.div>
                    <mock-styled.div>
                      Marketplace visible
                    </mock-styled.div>
                  </mock-styled.div>
                </mock-styled.div>
              </mock-styled.div>
            </mock-styled.div>
            <mock-styled.div
              classname=""
            >
              <mock-styled.div
                classname="mock-css.
  @keyframes fade-in {
    from {
      opacity: 0;
    }

    to {
      opacity: 1;
    }
  }
  animation-duration: 0.5s;
  animation-fill-mode: both;
  animation-delay: 0.1s;
  animation-name: fade-in;
"
              >
                <mock-styled.div>
                  <mock-styled.div
                    classname=""
                  >
                    <img
                      src="https://reapit-marketplace-app-media-dev.s3.eu-west-2.amazonaws.com/Data-Warehouse-icon.png"
                    />
                  </mock-styled.div>
                  <mock-styled.div
                    classname="mock-css."
                  >
                    <mock-styled.h5>
                      Data Warehouse
                    </mock-styled.h5>
                    <mock-styled.h6>
                      Reapit Ltd
                    </mock-styled.h6>
                    <mock-styled.h6 />
                  </mock-styled.div>
                </mock-styled.div>
                <mock-styled.div
                  classname="mock-css.
  margin-bottom: 0.75rem;
"
                >
                  The data warehouse houses lots of data. The data warehouse houses lots of data.
                </mock-styled.div>
                <mock-styled.div
                  classname="mock-css.
  margin-top: 0.75rem;
"
                >
                  <mock-styled.h5>
                    Installation and Visibility
                  </mock-styled.h5>
                  <mock-styled.h6 />
                </mock-styled.div>
                <mock-styled.div>
                  <mock-styled.div>
                    <mock-styled.span
                      classname=""
                    >
                      <svg />
                    </mock-styled.span>
                  </mock-styled.div>
                  <mock-styled.div>
                    <mock-styled.div>
                      Installation Status
                    </mock-styled.div>
                    <mock-styled.div>
                      Not installed
                    </mock-styled.div>
                  </mock-styled.div>
                </mock-styled.div>
                <mock-styled.div>
                  <mock-styled.div>
                    <mock-styled.span
                      classname=""
                    >
                      <svg />
                    </mock-styled.span>
                  </mock-styled.div>
                  <mock-styled.div>
                    <mock-styled.div>
                      Marketplace Visibility
                    </mock-styled.div>
                    <mock-styled.div>
                      Marketplace hidden
                    </mock-styled.div>
                  </mock-styled.div>
                </mock-styled.div>
              </mock-styled.div>
            </mock-styled.div>
            <mock-styled.div
              classname=""
            >
              <mock-styled.div
                classname="mock-css.
  @keyframes fade-in {
    from {
      opacity: 0;
    }

    to {
      opacity: 1;
    }
  }
  animation-duration: 0.5s;
  animation-fill-mode: both;
  animation-delay: 0.1s;
  animation-name: fade-in;
"
              >
                <mock-styled.div>
                  <mock-styled.div
                    classname=""
                  >
                    <img
                      src="https://reapit-marketplace-app-media-dev.s3.eu-west-2.amazonaws.com/Reapit-Connect-icon.png"
                    />
                  </mock-styled.div>
                  <mock-styled.div
                    classname="mock-css."
                  >
                    <mock-styled.h5>
                      Reapit Connect
                    </mock-styled.h5>
                    <mock-styled.h6>
                      Reapit Ltd
                    </mock-styled.h6>
                    <mock-styled.h6>
                      Integration
                    </mock-styled.h6>
                  </mock-styled.div>
                </mock-styled.div>
                <mock-styled.div
                  classname="mock-css.
  margin-bottom: 0.75rem;
"
                >
                  Reapit Connect removes the overhead of having to build and maintain a user credential directory for your app.
                </mock-styled.div>
                <mock-styled.div
                  classname="mock-css.
  margin-top: 0.75rem;
"
                >
                  <mock-styled.h5>
                    Installation and Visibility
                  </mock-styled.h5>
                  <mock-styled.h6 />
                </mock-styled.div>
                <mock-styled.div>
                  <mock-styled.div>
                    <mock-styled.span
                      classname=""
                    >
                      <svg />
                    </mock-styled.span>
                  </mock-styled.div>
                  <mock-styled.div>
                    <mock-styled.div>
                      Installation Status
                    </mock-styled.div>
                    <mock-styled.div>
                      Not installed
                    </mock-styled.div>
                  </mock-styled.div>
                </mock-styled.div>
                <mock-styled.div>
                  <mock-styled.div>
                    <mock-styled.span
                      classname=""
                    >
                      <svg />
                    </mock-styled.span>
                  </mock-styled.div>
                  <mock-styled.div>
                    <mock-styled.div>
                      Marketplace Visibility
                    </mock-styled.div>
                    <mock-styled.div>
                      Marketplace hidden
                    </mock-styled.div>
                  </mock-styled.div>
                </mock-styled.div>
              </mock-styled.div>
            </mock-styled.div>
            <mock-styled.div
              classname=""
            >
              <mock-styled.div
                classname="mock-css.
  @keyframes fade-in {
    from {
      opacity: 0;
    }

    to {
      opacity: 1;
    }
  }
  animation-duration: 0.5s;
  animation-fill-mode: both;
  animation-delay: 0.1s;
  animation-name: fade-in;
"
              >
                <mock-styled.div>
                  <mock-styled.div
                    classname=""
                  >
                    <img
                      src="https://reapit-marketplace-app-media-dev.s3.eu-west-2.amazonaws.com/Online-Check-List-icon.png"
                    />
                  </mock-styled.div>
                  <mock-styled.div
                    classname="mock-css."
                  >
                    <mock-styled.h5>
                      Online Check List
                    </mock-styled.h5>
                    <mock-styled.h6>
                      Reapit Ltd
                    </mock-styled.h6>
                    <mock-styled.h6 />
                  </mock-styled.div>
                </mock-styled.div>
                <mock-styled.div
                  classname="mock-css.
  margin-bottom: 0.75rem;
"
                >
                  Helps you to get organised, simplify your workflow, and to ensure checks are carried out. Manage your checks online from anywhere.
                </mock-styled.div>
                <mock-styled.div
                  classname="mock-css.
  margin-top: 0.75rem;
"
                >
                  <mock-styled.h5>
                    Installation and Visibility
                  </mock-styled.h5>
                  <mock-styled.h6 />
                </mock-styled.div>
                <mock-styled.div>
                  <mock-styled.div>
                    <mock-styled.span
                      classname=""
                    >
                      <svg />
                    </mock-styled.span>
                  </mock-styled.div>
                  <mock-styled.div>
                    <mock-styled.div>
                      Installation Status
                    </mock-styled.div>
                    <mock-styled.div>
                      Not installed
                    </mock-styled.div>
                  </mock-styled.div>
                </mock-styled.div>
                <mock-styled.div>
                  <mock-styled.div>
                    <mock-styled.span
                      classname=""
                    >
                      <svg />
                    </mock-styled.span>
                  </mock-styled.div>
                  <mock-styled.div>
                    <mock-styled.div>
                      Marketplace Visibility
                    </mock-styled.div>
                    <mock-styled.div>
                      Marketplace visible
                    </mock-styled.div>
                  </mock-styled.div>
                </mock-styled.div>
              </mock-styled.div>
            </mock-styled.div>
            <mock-styled.div
              classname=""
            >
              <mock-styled.div
                classname="mock-css.
  @keyframes fade-in {
    from {
      opacity: 0;
    }

    to {
      opacity: 1;
    }
  }
  animation-duration: 0.5s;
  animation-fill-mode: both;
  animation-delay: 0.1s;
  animation-name: fade-in;
"
              >
                <mock-styled.div>
                  <mock-styled.div
                    classname=""
                  >
                    <img
                      src="https://reapit-marketplace-app-media-dev.s3.eu-west-2.amazonaws.com/Geo-Diary-icon.png"
                    />
                  </mock-styled.div>
                  <mock-styled.div
                    classname="mock-css."
                  >
                    <mock-styled.h5>
                      Geo Diary
                    </mock-styled.h5>
                    <mock-styled.h6>
                      Reapit Ltd
                    </mock-styled.h6>
                    <mock-styled.h6 />
                  </mock-styled.div>
                </mock-styled.div>
                <mock-styled.div
                  classname="mock-css.
  margin-bottom: 0.75rem;
"
                >
                  GEO Diary is the App for the Negotiator on the go, instant access to your daily & weekly appointments.
                </mock-styled.div>
                <mock-styled.div
                  classname="mock-css.
  margin-top: 0.75rem;
"
                >
                  <mock-styled.h5>
                    Installation and Visibility
                  </mock-styled.h5>
                  <mock-styled.h6 />
                </mock-styled.div>
                <mock-styled.div>
                  <mock-styled.div>
                    <mock-styled.span
                      classname=""
                    >
                      <svg />
                    </mock-styled.span>
                  </mock-styled.div>
                  <mock-styled.div>
                    <mock-styled.div>
                      Installation Status
                    </mock-styled.div>
                    <mock-styled.div>
                      Not installed
                    </mock-styled.div>
                  </mock-styled.div>
                </mock-styled.div>
                <mock-styled.div>
                  <mock-styled.div>
                    <mock-styled.span
                      classname=""
                    >
                      <svg />
                    </mock-styled.span>
                  </mock-styled.div>
                  <mock-styled.div>
                    <mock-styled.div>
                      Marketplace Visibility
                    </mock-styled.div>
                    <mock-styled.div>
                      Marketplace visible
                    </mock-styled.div>
                  </mock-styled.div>
                </mock-styled.div>
              </mock-styled.div>
            </mock-styled.div>
          </mock-styled.div>
          <mock-styled.div>
            <mock-styled.div>
              <mock-styled.input
                value="1"
              />
               of 
              1
            </mock-styled.div>
            <mock-styled.button
              data-testid="back-button"
              type="button"
            >
              <mock-styled.span
                classname=""
              >
                <svg />
              </mock-styled.span>
            </mock-styled.button>
            <mock-styled.button
              data-testid="forward-button"
              type="button"
            >
              <mock-styled.span
                classname=""
              >
                <svg />
              </mock-styled.span>
            </mock-styled.button>
          </mock-styled.div>
        </mock-styled.section>
      </mock-styled.div>
    </div>
  </body>,
  "container": <div>
    <mock-styled.div />
    <mock-styled.div
      classname="mock-css.
  flex: 1 1 auto;
"
    >
      <mock-styled.aside
        classname=""
      >
        <mock-styled.span
          classname="mock-css.
  margin-bottom: 0.75rem;
 mock-css.
  font-size: 5rem;
"
        >
          <svg />
        </mock-styled.span>
        <mock-styled.p
          classname=""
        >
          AppMarket Visibility and Installation Management
        </mock-styled.p>
        <mock-styled.p
          classname="mock-css."
        >
          To set the visibility of an app in the AppMarket or to manage installations for your organisation or specific office groups, please select an app.
        </mock-styled.p>
        <div
          class="mock-css.
  margin-bottom: 0.75rem;
"
        >
          <mock-styled.p
            classname=""
          >
            Organisations
          </mock-styled.p>
          <mock-styled.p
            classname="mock-css."
          >
            You are an admin for multiple organisations - select from the list below for data specific to one of these organisations
          </mock-styled.p>
          <mock-styled.div
            classname="mock-css.
  border-radius: 0.25rem;
"
          >
            <mock-styled.div>
              <mock-styled.select
                classname="mock-css.
  width: 100%;
"
                value="SOME_ID"
              >
                <option
                  value=""
                >
                  Please Select
                </option>
                <option
                  value="value"
                >
                  name
                </option>
                <option
                  value="value"
                >
                  name
                </option>
              </mock-styled.select>
              <mock-styled.label
                htmlfor="myId"
              >
                Select Organisation
              </mock-styled.label>
            </mock-styled.div>
          </mock-styled.div>
        </div>
        <mock-styled.div>
          <mock-styled.div
            classname="mock-css.
  input {
    width: 100%;
  }
"
          >
            <mock-styled.input
              classname=""
              id="test-static-id"
              name="searchTerm"
              placeholder="Developer or App"
              type="text"
            />
            <mock-styled.label
              htmlfor="test-static-id"
            >
              Search
            </mock-styled.label>
          </mock-styled.div>
        </mock-styled.div>
      </mock-styled.aside>
      <mock-styled.section
        classname="mock-css.
  height: 100%;
"
      >
        <mock-styled.div
          classname="mock-css.
  justify-content: space-between;
"
        >
          <mock-styled.h1
            classname=""
          >
            SOME_NAME
             AppMarket
          </mock-styled.h1>
        </mock-styled.div>
        <mock-styled.div
          classname=""
        >
          <mock-styled.div
            classname=""
          >
            <mock-styled.div
              classname="mock-css.
  @keyframes fade-in {
    from {
      opacity: 0;
    }

    to {
      opacity: 1;
    }
  }
  animation-duration: 0.5s;
  animation-fill-mode: both;
  animation-delay: 0.1s;
  animation-name: fade-in;
"
            >
              <mock-styled.div>
                <mock-styled.div
                  classname=""
                >
                  <mock-styled.div
                    style="font-size: 1.953125em; width: 50px; height: 50px;"
                  >
                    <svg
                      fill="none"
                      height="1em"
                      viewBox="0 0 60 35"
                      width="1em"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M50.9685 13.7768C50.1805 8.8795 45.8082 5.12069 40.5469 5.12069C38.5676 5.12069 36.6656 5.65245 35.016 6.64427C32.5063 2.54863 27.9881 0 22.9688 0C15.2148 0 8.90625 6.12582 8.90625 13.6552C8.90625 13.7018 8.90625 13.7502 8.90801 13.7968C3.92461 14.6119 0 18.8308 0 23.8966C0 29.544 4.84816 34.1379 10.6641 34.1379H49.3359C55.1518 34.1379 60 29.544 60 23.8966C60 18.7876 56.0119 14.542 50.9685 13.7768Z"
                        fill="#E3E3E3"
                      />
                    </svg>
                  </mock-styled.div>
                </mock-styled.div>
                <mock-styled.div
                  classname="mock-css."
                >
                  <mock-styled.h5>
                    Test App Dev
                  </mock-styled.h5>
                  <mock-styled.h6>
                    DFG
                  </mock-styled.h6>
                  <mock-styled.h6>
                    Integration
                  </mock-styled.h6>
                </mock-styled.div>
              </mock-styled.div>
              <mock-styled.div
                classname="mock-css.
  margin-top: 0.75rem;
"
              >
                <mock-styled.h5>
                  Installation and Visibility
                </mock-styled.h5>
                <mock-styled.h6 />
              </mock-styled.div>
              <mock-styled.div>
                <mock-styled.div>
                  <mock-styled.span
                    classname=""
                  >
                    <svg />
                  </mock-styled.span>
                </mock-styled.div>
                <mock-styled.div>
                  <mock-styled.div>
                    Installation Status
                  </mock-styled.div>
                  <mock-styled.div>
                    Not installed
                  </mock-styled.div>
                </mock-styled.div>
              </mock-styled.div>
              <mock-styled.div>
                <mock-styled.div>
                  <mock-styled.span
                    classname=""
                  >
                    <svg />
                  </mock-styled.span>
                </mock-styled.div>
                <mock-styled.div>
                  <mock-styled.div>
                    Marketplace Visibility
                  </mock-styled.div>
                  <mock-styled.div>
                    Marketplace visible
                  </mock-styled.div>
                </mock-styled.div>
              </mock-styled.div>
            </mock-styled.div>
          </mock-styled.div>
          <mock-styled.div
            classname=""
          >
            <mock-styled.div
              classname="mock-css.
  @keyframes fade-in {
    from {
      opacity: 0;
    }

    to {
      opacity: 1;
    }
  }
  animation-duration: 0.5s;
  animation-fill-mode: both;
  animation-delay: 0.1s;
  animation-name: fade-in;
"
            >
              <mock-styled.div>
                <mock-styled.div
                  classname=""
                >
                  <img
                    src="https://reapit-marketplace-app-media-dev.s3.eu-west-2.amazonaws.com/Reapit-Insights-icon.png"
                  />
                </mock-styled.div>
                <mock-styled.div
                  classname="mock-css."
                >
                  <mock-styled.h5>
                    Reapit Insights
                  </mock-styled.h5>
                  <mock-styled.h6>
                    Reapit Ltd
                  </mock-styled.h6>
                  <mock-styled.h6 />
                </mock-styled.div>
              </mock-styled.div>
              <mock-styled.div
                classname="mock-css.
  margin-bottom: 0.75rem;
"
              >
                Blah blah blah. Blah blah blah. Blah blah blah. Blah blah blah. Blah blah blah.
              </mock-styled.div>
              <mock-styled.div
                classname="mock-css.
  margin-top: 0.75rem;
"
              >
                <mock-styled.h5>
                  Installation and Visibility
                </mock-styled.h5>
                <mock-styled.h6 />
              </mock-styled.div>
              <mock-styled.div>
                <mock-styled.div>
                  <mock-styled.span
                    classname=""
                  >
                    <svg />
                  </mock-styled.span>
                </mock-styled.div>
                <mock-styled.div>
                  <mock-styled.div>
                    Installation Status
                  </mock-styled.div>
                  <mock-styled.div>
                    Not installed
                  </mock-styled.div>
                </mock-styled.div>
              </mock-styled.div>
              <mock-styled.div>
                <mock-styled.div>
                  <mock-styled.span
                    classname=""
                  >
                    <svg />
                  </mock-styled.span>
                </mock-styled.div>
                <mock-styled.div>
                  <mock-styled.div>
                    Marketplace Visibility
                  </mock-styled.div>
                  <mock-styled.div>
                    Marketplace visible
                  </mock-styled.div>
                </mock-styled.div>
              </mock-styled.div>
            </mock-styled.div>
          </mock-styled.div>
          <mock-styled.div
            classname=""
          >
            <mock-styled.div
              classname="mock-css.
  @keyframes fade-in {
    from {
      opacity: 0;
    }

    to {
      opacity: 1;
    }
  }
  animation-duration: 0.5s;
  animation-fill-mode: both;
  animation-delay: 0.1s;
  animation-name: fade-in;
"
            >
              <mock-styled.div>
                <mock-styled.div
                  classname=""
                >
                  <img
                    src="https://reapit-marketplace-app-media-dev.s3.eu-west-2.amazonaws.com/Reapit-Connect-Management-icon.png"
                  />
                </mock-styled.div>
                <mock-styled.div
                  classname="mock-css."
                >
                  <mock-styled.h5>
                    Marketplace Management
                  </mock-styled.h5>
                  <mock-styled.h6>
                    Reapit Ltd
                  </mock-styled.h6>
                  <mock-styled.h6 />
                </mock-styled.div>
              </mock-styled.div>
              <mock-styled.div
                classname="mock-css.
  margin-bottom: 0.75rem;
"
              >
                Description Description Description Description Description Description Description Description
              </mock-styled.div>
              <mock-styled.div
                classname="mock-css.
  margin-top: 0.75rem;
"
              >
                <mock-styled.h5>
                  Installation and Visibility
                </mock-styled.h5>
                <mock-styled.h6 />
              </mock-styled.div>
              <mock-styled.div>
                <mock-styled.div>
                  <mock-styled.span
                    classname=""
                  >
                    <svg />
                  </mock-styled.span>
                </mock-styled.div>
                <mock-styled.div>
                  <mock-styled.div>
                    Installation Status
                  </mock-styled.div>
                  <mock-styled.div>
                    Not installed
                  </mock-styled.div>
                </mock-styled.div>
              </mock-styled.div>
              <mock-styled.div>
                <mock-styled.div>
                  <mock-styled.span
                    classname=""
                  >
                    <svg />
                  </mock-styled.span>
                </mock-styled.div>
                <mock-styled.div>
                  <mock-styled.div>
                    Marketplace Visibility
                  </mock-styled.div>
                  <mock-styled.div>
                    Marketplace visible
                  </mock-styled.div>
                </mock-styled.div>
              </mock-styled.div>
            </mock-styled.div>
          </mock-styled.div>
          <mock-styled.div
            classname=""
          >
            <mock-styled.div
              classname="mock-css.
  @keyframes fade-in {
    from {
      opacity: 0;
    }

    to {
      opacity: 1;
    }
  }
  animation-duration: 0.5s;
  animation-fill-mode: both;
  animation-delay: 0.1s;
  animation-name: fade-in;
"
            >
              <mock-styled.div>
                <mock-styled.div
                  classname=""
                >
                  <img
                    src="https://reapit-marketplace-app-media-dev.s3.eu-west-2.amazonaws.com/Holly-Test-App-icon(1).png"
                  />
                </mock-styled.div>
                <mock-styled.div
                  classname="mock-css."
                >
                  <mock-styled.h5>
                    Holly Test App
                  </mock-styled.h5>
                  <mock-styled.h6>
                    Holly Phillips Testing
                  </mock-styled.h6>
                  <mock-styled.h6 />
                </mock-styled.div>
              </mock-styled.div>
              <mock-styled.div
                classname="mock-css.
  margin-bottom: 0.75rem;
"
              >
                https://holly.com https://holly.com https://holly.com https://holly.comhttps://holly.com https://holly.comhttps://holly.com https://holly.com
              </mock-styled.div>
              <mock-styled.div
                classname="mock-css.
  margin-top: 0.75rem;
"
              >
                <mock-styled.h5>
                  Installation and Visibility
                </mock-styled.h5>
                <mock-styled.h6 />
              </mock-styled.div>
              <mock-styled.div>
                <mock-styled.div>
                  <mock-styled.span
                    classname=""
                  >
                    <svg />
                  </mock-styled.span>
                </mock-styled.div>
                <mock-styled.div>
                  <mock-styled.div>
                    Installation Status
                  </mock-styled.div>
                  <mock-styled.div>
                    Not installed
                  </mock-styled.div>
                </mock-styled.div>
              </mock-styled.div>
              <mock-styled.div>
                <mock-styled.div>
                  <mock-styled.span
                    classname=""
                  >
                    <svg />
                  </mock-styled.span>
                </mock-styled.div>
                <mock-styled.div>
                  <mock-styled.div>
                    Marketplace Visibility
                  </mock-styled.div>
                  <mock-styled.div>
                    Marketplace hidden
                  </mock-styled.div>
                </mock-styled.div>
              </mock-styled.div>
            </mock-styled.div>
          </mock-styled.div>
          <mock-styled.div
            classname=""
          >
            <mock-styled.div
              classname="mock-css.
  @keyframes fade-in {
    from {
      opacity: 0;
    }

    to {
      opacity: 1;
    }
  }
  animation-duration: 0.5s;
  animation-fill-mode: both;
  animation-delay: 0.1s;
  animation-name: fade-in;
"
            >
              <mock-styled.div>
                <mock-styled.div
                  classname=""
                >
                  <img
                    src="https://reapit-marketplace-app-media-dev.s3.eu-west-2.amazonaws.com/Reapit-Payments-Portal-icon.png"
                  />
                </mock-styled.div>
                <mock-styled.div
                  classname="mock-css."
                >
                  <mock-styled.h5>
                    Reapit Payments Portal
                  </mock-styled.h5>
                  <mock-styled.h6>
                    Reapit Ltd
                  </mock-styled.h6>
                  <mock-styled.h6 />
                </mock-styled.div>
              </mock-styled.div>
              <mock-styled.div
                classname="mock-css.
  margin-bottom: 0.75rem;
"
              >
                It takes your money and sends it to Sage Pay. Then it updates RPS.
              </mock-styled.div>
              <mock-styled.div
                classname="mock-css.
  margin-top: 0.75rem;
"
              >
                <mock-styled.h5>
                  Installation and Visibility
                </mock-styled.h5>
                <mock-styled.h6 />
              </mock-styled.div>
              <mock-styled.div>
                <mock-styled.div>
                  <mock-styled.span
                    classname=""
                  >
                    <svg />
                  </mock-styled.span>
                </mock-styled.div>
                <mock-styled.div>
                  <mock-styled.div>
                    Installation Status
                  </mock-styled.div>
                  <mock-styled.div>
                    Not installed
                  </mock-styled.div>
                </mock-styled.div>
              </mock-styled.div>
              <mock-styled.div>
                <mock-styled.div>
                  <mock-styled.span
                    classname=""
                  >
                    <svg />
                  </mock-styled.span>
                </mock-styled.div>
                <mock-styled.div>
                  <mock-styled.div>
                    Marketplace Visibility
                  </mock-styled.div>
                  <mock-styled.div>
                    Marketplace visible
                  </mock-styled.div>
                </mock-styled.div>
              </mock-styled.div>
            </mock-styled.div>
          </mock-styled.div>
          <mock-styled.div
            classname=""
          >
            <mock-styled.div
              classname="mock-css.
  @keyframes fade-in {
    from {
      opacity: 0;
    }

    to {
      opacity: 1;
    }
  }
  animation-duration: 0.5s;
  animation-fill-mode: both;
  animation-delay: 0.1s;
  animation-name: fade-in;
"
            >
              <mock-styled.div>
                <mock-styled.div
                  classname=""
                >
                  <img
                    src="https://reapit-marketplace-app-media-dev.s3.eu-west-2.amazonaws.com/Data-Warehouse-icon.png"
                  />
                </mock-styled.div>
                <mock-styled.div
                  classname="mock-css."
                >
                  <mock-styled.h5>
                    Data Warehouse
                  </mock-styled.h5>
                  <mock-styled.h6>
                    Reapit Ltd
                  </mock-styled.h6>
                  <mock-styled.h6 />
                </mock-styled.div>
              </mock-styled.div>
              <mock-styled.div
                classname="mock-css.
  margin-bottom: 0.75rem;
"
              >
                The data warehouse houses lots of data. The data warehouse houses lots of data.
              </mock-styled.div>
              <mock-styled.div
                classname="mock-css.
  margin-top: 0.75rem;
"
              >
                <mock-styled.h5>
                  Installation and Visibility
                </mock-styled.h5>
                <mock-styled.h6 />
              </mock-styled.div>
              <mock-styled.div>
                <mock-styled.div>
                  <mock-styled.span
                    classname=""
                  >
                    <svg />
                  </mock-styled.span>
                </mock-styled.div>
                <mock-styled.div>
                  <mock-styled.div>
                    Installation Status
                  </mock-styled.div>
                  <mock-styled.div>
                    Not installed
                  </mock-styled.div>
                </mock-styled.div>
              </mock-styled.div>
              <mock-styled.div>
                <mock-styled.div>
                  <mock-styled.span
                    classname=""
                  >
                    <svg />
                  </mock-styled.span>
                </mock-styled.div>
                <mock-styled.div>
                  <mock-styled.div>
                    Marketplace Visibility
                  </mock-styled.div>
                  <mock-styled.div>
                    Marketplace hidden
                  </mock-styled.div>
                </mock-styled.div>
              </mock-styled.div>
            </mock-styled.div>
          </mock-styled.div>
          <mock-styled.div
            classname=""
          >
            <mock-styled.div
              classname="mock-css.
  @keyframes fade-in {
    from {
      opacity: 0;
    }

    to {
      opacity: 1;
    }
  }
  animation-duration: 0.5s;
  animation-fill-mode: both;
  animation-delay: 0.1s;
  animation-name: fade-in;
"
            >
              <mock-styled.div>
                <mock-styled.div
                  classname=""
                >
                  <img
                    src="https://reapit-marketplace-app-media-dev.s3.eu-west-2.amazonaws.com/Reapit-Connect-icon.png"
                  />
                </mock-styled.div>
                <mock-styled.div
                  classname="mock-css."
                >
                  <mock-styled.h5>
                    Reapit Connect
                  </mock-styled.h5>
                  <mock-styled.h6>
                    Reapit Ltd
                  </mock-styled.h6>
                  <mock-styled.h6>
                    Integration
                  </mock-styled.h6>
                </mock-styled.div>
              </mock-styled.div>
              <mock-styled.div
                classname="mock-css.
  margin-bottom: 0.75rem;
"
              >
                Reapit Connect removes the overhead of having to build and maintain a user credential directory for your app.
              </mock-styled.div>
              <mock-styled.div
                classname="mock-css.
  margin-top: 0.75rem;
"
              >
                <mock-styled.h5>
                  Installation and Visibility
                </mock-styled.h5>
                <mock-styled.h6 />
              </mock-styled.div>
              <mock-styled.div>
                <mock-styled.div>
                  <mock-styled.span
                    classname=""
                  >
                    <svg />
                  </mock-styled.span>
                </mock-styled.div>
                <mock-styled.div>
                  <mock-styled.div>
                    Installation Status
                  </mock-styled.div>
                  <mock-styled.div>
                    Not installed
                  </mock-styled.div>
                </mock-styled.div>
              </mock-styled.div>
              <mock-styled.div>
                <mock-styled.div>
                  <mock-styled.span
                    classname=""
                  >
                    <svg />
                  </mock-styled.span>
                </mock-styled.div>
                <mock-styled.div>
                  <mock-styled.div>
                    Marketplace Visibility
                  </mock-styled.div>
                  <mock-styled.div>
                    Marketplace hidden
                  </mock-styled.div>
                </mock-styled.div>
              </mock-styled.div>
            </mock-styled.div>
          </mock-styled.div>
          <mock-styled.div
            classname=""
          >
            <mock-styled.div
              classname="mock-css.
  @keyframes fade-in {
    from {
      opacity: 0;
    }

    to {
      opacity: 1;
    }
  }
  animation-duration: 0.5s;
  animation-fill-mode: both;
  animation-delay: 0.1s;
  animation-name: fade-in;
"
            >
              <mock-styled.div>
                <mock-styled.div
                  classname=""
                >
                  <img
                    src="https://reapit-marketplace-app-media-dev.s3.eu-west-2.amazonaws.com/Online-Check-List-icon.png"
                  />
                </mock-styled.div>
                <mock-styled.div
                  classname="mock-css."
                >
                  <mock-styled.h5>
                    Online Check List
                  </mock-styled.h5>
                  <mock-styled.h6>
                    Reapit Ltd
                  </mock-styled.h6>
                  <mock-styled.h6 />
                </mock-styled.div>
              </mock-styled.div>
              <mock-styled.div
                classname="mock-css.
  margin-bottom: 0.75rem;
"
              >
                Helps you to get organised, simplify your workflow, and to ensure checks are carried out. Manage your checks online from anywhere.
              </mock-styled.div>
              <mock-styled.div
                classname="mock-css.
  margin-top: 0.75rem;
"
              >
                <mock-styled.h5>
                  Installation and Visibility
                </mock-styled.h5>
                <mock-styled.h6 />
              </mock-styled.div>
              <mock-styled.div>
                <mock-styled.div>
                  <mock-styled.span
                    classname=""
                  >
                    <svg />
                  </mock-styled.span>
                </mock-styled.div>
                <mock-styled.div>
                  <mock-styled.div>
                    Installation Status
                  </mock-styled.div>
                  <mock-styled.div>
                    Not installed
                  </mock-styled.div>
                </mock-styled.div>
              </mock-styled.div>
              <mock-styled.div>
                <mock-styled.div>
                  <mock-styled.span
                    classname=""
                  >
                    <svg />
                  </mock-styled.span>
                </mock-styled.div>
                <mock-styled.div>
                  <mock-styled.div>
                    Marketplace Visibility
                  </mock-styled.div>
                  <mock-styled.div>
                    Marketplace visible
                  </mock-styled.div>
                </mock-styled.div>
              </mock-styled.div>
            </mock-styled.div>
          </mock-styled.div>
          <mock-styled.div
            classname=""
          >
            <mock-styled.div
              classname="mock-css.
  @keyframes fade-in {
    from {
      opacity: 0;
    }

    to {
      opacity: 1;
    }
  }
  animation-duration: 0.5s;
  animation-fill-mode: both;
  animation-delay: 0.1s;
  animation-name: fade-in;
"
            >
              <mock-styled.div>
                <mock-styled.div
                  classname=""
                >
                  <img
                    src="https://reapit-marketplace-app-media-dev.s3.eu-west-2.amazonaws.com/Geo-Diary-icon.png"
                  />
                </mock-styled.div>
                <mock-styled.div
                  classname="mock-css."
                >
                  <mock-styled.h5>
                    Geo Diary
                  </mock-styled.h5>
                  <mock-styled.h6>
                    Reapit Ltd
                  </mock-styled.h6>
                  <mock-styled.h6 />
                </mock-styled.div>
              </mock-styled.div>
              <mock-styled.div
                classname="mock-css.
  margin-bottom: 0.75rem;
"
              >
                GEO Diary is the App for the Negotiator on the go, instant access to your daily & weekly appointments.
              </mock-styled.div>
              <mock-styled.div
                classname="mock-css.
  margin-top: 0.75rem;
"
              >
                <mock-styled.h5>
                  Installation and Visibility
                </mock-styled.h5>
                <mock-styled.h6 />
              </mock-styled.div>
              <mock-styled.div>
                <mock-styled.div>
                  <mock-styled.span
                    classname=""
                  >
                    <svg />
                  </mock-styled.span>
                </mock-styled.div>
                <mock-styled.div>
                  <mock-styled.div>
                    Installation Status
                  </mock-styled.div>
                  <mock-styled.div>
                    Not installed
                  </mock-styled.div>
                </mock-styled.div>
              </mock-styled.div>
              <mock-styled.div>
                <mock-styled.div>
                  <mock-styled.span
                    classname=""
                  >
                    <svg />
                  </mock-styled.span>
                </mock-styled.div>
                <mock-styled.div>
                  <mock-styled.div>
                    Marketplace Visibility
                  </mock-styled.div>
                  <mock-styled.div>
                    Marketplace visible
                  </mock-styled.div>
                </mock-styled.div>
              </mock-styled.div>
            </mock-styled.div>
          </mock-styled.div>
        </mock-styled.div>
        <mock-styled.div>
          <mock-styled.div>
            <mock-styled.input
              value="1"
            />
             of 
            1
          </mock-styled.div>
          <mock-styled.button
            data-testid="back-button"
            type="button"
          >
            <mock-styled.span
              classname=""
            >
              <svg />
            </mock-styled.span>
          </mock-styled.button>
          <mock-styled.button
            data-testid="forward-button"
            type="button"
          >
            <mock-styled.span
              classname=""
            >
              <svg />
            </mock-styled.span>
          </mock-styled.button>
        </mock-styled.div>
      </mock-styled.section>
    </mock-styled.div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`MarketplacePage should match a snapshot where no orgClientId exists 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <mock-styled.div />
      <mock-styled.div
        classname="mock-css.
  flex: 1 1 auto;
"
      >
        <mock-styled.aside
          classname=""
        >
          <mock-styled.span
            classname="mock-css.
  margin-bottom: 0.75rem;
 mock-css.
  font-size: 5rem;
"
          >
            <svg />
          </mock-styled.span>
          <mock-styled.p
            classname=""
          >
            AppMarket Visibility and Installation Management
          </mock-styled.p>
          <mock-styled.p
            classname="mock-css."
          >
            To set the visibility of an app in the AppMarket or to manage installations for your organisation or specific office groups, please select an app.
          </mock-styled.p>
          <div
            class="mock-css.
  margin-bottom: 0.75rem;
"
          >
            <mock-styled.p
              classname=""
            >
              Organisations
            </mock-styled.p>
            <mock-styled.p
              classname="mock-css."
            >
              You are an admin for multiple organisations - select from the list below for data specific to one of these organisations
            </mock-styled.p>
            <mock-styled.div
              classname="mock-css.
  border-radius: 0.25rem;
"
            >
              <mock-styled.div>
                <mock-styled.select
                  classname="mock-css.
  width: 100%;
"
                  value="SOME_ID"
                >
                  <option
                    value=""
                  >
                    Please Select
                  </option>
                  <option
                    value="value"
                  >
                    name
                  </option>
                  <option
                    value="value"
                  >
                    name
                  </option>
                </mock-styled.select>
                <mock-styled.label
                  htmlfor="myId"
                >
                  Select Organisation
                </mock-styled.label>
              </mock-styled.div>
            </mock-styled.div>
          </div>
          <mock-styled.div>
            <mock-styled.div
              classname="mock-css.
  input {
    width: 100%;
  }
"
            >
              <mock-styled.input
                classname=""
                id="test-static-id"
                name="searchTerm"
                placeholder="Developer or App"
                type="text"
              />
              <mock-styled.label
                htmlfor="test-static-id"
              >
                Search
              </mock-styled.label>
            </mock-styled.div>
          </mock-styled.div>
        </mock-styled.aside>
        <mock-styled.section
          classname="mock-css.
  height: 100%;
"
        >
          <mock-styled.div
            classname="mock-css.
  justify-content: space-between;
"
          >
            <mock-styled.h1
              classname=""
            >
               AppMarket
            </mock-styled.h1>
          </mock-styled.div>
          <mock-styled.div
            classname="mock-css. mock-css. mock-css. mock-css."
          >
            <div
              class="mock-css.
  padding: 0 1rem;
  display: flex;
  align-items: center;
  border-radius: var(--default-border-radius) 0 0 var(--default-border-radius);
  cursor: pointer;

  , {
    color: var(--color-white);
  }
"
              data-testid="close-icon"
            >
              <mock-styled.span
                classname=""
              >
                <svg />
              </mock-styled.span>
            </div>
            <div
              class="mock-css.
  padding: 1rem;
  opacity: 0;
  transition: 0.5s;
  width: 100%;
"
            >
              No organisation selected. You need to select an organisation to view available apps.
            </div>
          </mock-styled.div>
        </mock-styled.section>
      </mock-styled.div>
    </div>
  </body>,
  "container": <div>
    <mock-styled.div />
    <mock-styled.div
      classname="mock-css.
  flex: 1 1 auto;
"
    >
      <mock-styled.aside
        classname=""
      >
        <mock-styled.span
          classname="mock-css.
  margin-bottom: 0.75rem;
 mock-css.
  font-size: 5rem;
"
        >
          <svg />
        </mock-styled.span>
        <mock-styled.p
          classname=""
        >
          AppMarket Visibility and Installation Management
        </mock-styled.p>
        <mock-styled.p
          classname="mock-css."
        >
          To set the visibility of an app in the AppMarket or to manage installations for your organisation or specific office groups, please select an app.
        </mock-styled.p>
        <div
          class="mock-css.
  margin-bottom: 0.75rem;
"
        >
          <mock-styled.p
            classname=""
          >
            Organisations
          </mock-styled.p>
          <mock-styled.p
            classname="mock-css."
          >
            You are an admin for multiple organisations - select from the list below for data specific to one of these organisations
          </mock-styled.p>
          <mock-styled.div
            classname="mock-css.
  border-radius: 0.25rem;
"
          >
            <mock-styled.div>
              <mock-styled.select
                classname="mock-css.
  width: 100%;
"
                value="SOME_ID"
              >
                <option
                  value=""
                >
                  Please Select
                </option>
                <option
                  value="value"
                >
                  name
                </option>
                <option
                  value="value"
                >
                  name
                </option>
              </mock-styled.select>
              <mock-styled.label
                htmlfor="myId"
              >
                Select Organisation
              </mock-styled.label>
            </mock-styled.div>
          </mock-styled.div>
        </div>
        <mock-styled.div>
          <mock-styled.div
            classname="mock-css.
  input {
    width: 100%;
  }
"
          >
            <mock-styled.input
              classname=""
              id="test-static-id"
              name="searchTerm"
              placeholder="Developer or App"
              type="text"
            />
            <mock-styled.label
              htmlfor="test-static-id"
            >
              Search
            </mock-styled.label>
          </mock-styled.div>
        </mock-styled.div>
      </mock-styled.aside>
      <mock-styled.section
        classname="mock-css.
  height: 100%;
"
      >
        <mock-styled.div
          classname="mock-css.
  justify-content: space-between;
"
        >
          <mock-styled.h1
            classname=""
          >
             AppMarket
          </mock-styled.h1>
        </mock-styled.div>
        <mock-styled.div
          classname="mock-css. mock-css. mock-css. mock-css."
        >
          <div
            class="mock-css.
  padding: 0 1rem;
  display: flex;
  align-items: center;
  border-radius: var(--default-border-radius) 0 0 var(--default-border-radius);
  cursor: pointer;

  , {
    color: var(--color-white);
  }
"
            data-testid="close-icon"
          >
            <mock-styled.span
              classname=""
            >
              <svg />
            </mock-styled.span>
          </div>
          <div
            class="mock-css.
  padding: 1rem;
  opacity: 0;
  transition: 0.5s;
  width: 100%;
"
          >
            No organisation selected. You need to select an organisation to view available apps.
          </div>
        </mock-styled.div>
      </mock-styled.section>
    </mock-styled.div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
